LAB6: ARNN2 updated

--- a/06_neural_networks/feedforward/keras/autoregression_keras_part2_SOLUTIONS.ipynb
+++ b/06_neural_networks/feedforward/keras/autoregression_keras_part2_SOLUTIONS.ipynb
@@ -48,7 +48,7 @@
     "import seaborn as sns\n",
     "sns.set()\n",
     "\n",
-    "#tensorflow imports\n",
+    "#  tensorflow imports\n",
     "import tensorflow as tf\n",
     "from tensorflow import keras\n",
     "from tensorflow.keras.layers import Input, Dense, Flatten, Dropout\n",
@@ -82,7 +82,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = 'https://raw.githubusercontent.com/health-data-science-OR/data/master/em_admits_ts.csv'\n",
+    "url = 'https://raw.githubusercontent.com/health-data-science-OR/data/master' \\\n",
+    "        + '/em_admits_ts.csv'\n",
     "em_admits = pd.read_csv(url)"
    ]
   },
@@ -132,7 +133,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "date_str = em_admits['month_year'].str[:3] + ' 20' + em_admits['month_year'].str[-2:]\n",
+    "date_str = em_admits['month_year'].str[:3] + ' 20' \\\n",
+    "    + em_admits['month_year'].str[-2:]\n",
     "date_str.name = 'date'\n",
     "em_admits = em_admits.set_index(pd.to_datetime(date_str))\n",
     "em_admits.index.freq = 'MS'\n",
@@ -281,7 +283,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#example solution\n",
+    "# example solution\n",
     "def ts_train_test_split(*arrays, train_size):\n",
     "    '''\n",
     "    time series train test split\n",
@@ -347,7 +349,7 @@
    "source": [
     "scaler = MinMaxScaler(feature_range=(-1, 1))\n",
     "\n",
-    "#scale on training data\n",
+    "# scale on training data\n",
     "scaler.fit(admit_rate.iloc[:-12].to_numpy().reshape(-1, 1))"
    ]
   },
@@ -403,7 +405,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#example answer\n",
+    "# example answer\n",
     "def get_linear_model(ws, lr=0.01, metrics=None):\n",
     "    '''\n",
     "    Sequential Keras model that minics\n",
@@ -414,7 +416,7 @@
     "    \n",
     "    model = Sequential([Dense(1, input_shape=(ws,))])\n",
     "    model.compile(loss='mse', \n",
-    "                  optimizer=Adam(lr=lr),\n",
+    "                  optimizer=Adam(learning_rate=lr),\n",
     "                  metrics=metrics)\n",
     "    \n",
     "    return model"
@@ -426,7 +428,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#set tensorflow random seed for repeatability\n",
+    "# set tensorflow random seed for repeatability\n",
     "tf.random.set_seed(1234)\n",
     "\n",
     "N_EPOCHS = 100\n",
@@ -546,7 +548,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#example solution\n",
+    "# example solution\n",
     "def plot_nn_prediction_results(model, X_train, y_train, y_test, y_preds):  \n",
     "    '''\n",
     "    utility function to plot the results of the prediction\n",
@@ -576,7 +578,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#predict next 12 months and plot\n",
+    "# predict next 12 months and plot\n",
     "H = 12\n",
     "y_preds_lm = autoregressive_iterative_forecast(model_lm, X_test[0], h=H)\n",
     "y_preds_lm = scaler.inverse_transform(y_preds_lm.reshape(-1, 1))\n",
@@ -660,7 +662,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#set tensorflow random seed\n",
+    "# set tensorflow random seed\n",
     "tf.random.set_seed(45676)\n",
     "\n",
     "N_EPOCHS = 100\n",
@@ -683,7 +685,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#predict next 12 months and plot\n",
+    "# predict next 12 months and plot\n",
     "H = 12\n",
     "y_preds_mlp = autoregressive_iterative_forecast(mlp, X_test[0], h=H)\n",
     "y_preds_mlp = scaler.inverse_transform(y_preds_mlp.reshape(-1, 1))\n",
@@ -702,10 +704,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#try changing the network parameters to see the impact on the \n",
-    "#rmse relative to the linear model\n",
+    "# try changing the network parameters to see the impact on the \n",
+    "# rmse relative to the linear model\n",
     "\n",
-    "#set tensorflow random seed\n",
+    "# set tensorflow random seed\n",
     "tf.random.set_seed(45676)\n",
     "#tf.random.set_seed(1234)\n",
     "\n",
@@ -783,25 +785,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#script to train the models.\n",
+    "# script to train the models.\n",
     "\n",
     "################# Parameters for the ensemble #################################\n",
-    "#set random seed so that ensemble can be repeated.\n",
+    "# set random seed so that ensemble can be repeated.\n",
     "tf.random.set_seed(1085)\n",
     "\n",
-    "#number of models to create...\n",
+    "# number of models to create...\n",
     "N_MODELS = 20\n",
     "\n",
-    "#max no. of epochs for training of each model.\n",
+    "# max no. of epochs for training of each model.\n",
     "N_EPOCHS = 100\n",
     "\n",
-    "#no. of autoregressive lags\n",
+    "# no. of autoregressive lags\n",
     "WINDOW_SIZE = 12\n",
     "\n",
-    "#early stopping reguluarization\n",
+    "# early stopping reguluarization\n",
     "es = EarlyStopping(monitor='loss', patience=10)\n",
     "\n",
-    "#I've pretrained 50 models you can load them from file if wanted.\n",
+    "# I've pretrained 50 models you can load them from file if wanted.\n",
     "LOAD_FROM_FILE = False\n",
     "\n",
     "###############################################################################\n",
@@ -850,8 +852,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#create the forecasts\n",
-    "#this code will take a few seconds to execute\n",
+    "# create the forecasts\n",
+    "# this code will take a few seconds to execute\n",
     "H = 12\n",
     "e_preds = []\n",
     "for model in models:\n",
@@ -890,7 +892,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#plot the individual forecasts and the median\n",
+    "# plot the individual forecasts and the median\n",
     "\n",
     "fig,ax = plt.subplots(1, 2, sharey=True, figsize=(12, 4))\n",
     "ax[0].plot(e_preds_tran)\n",
@@ -964,7 +966,7 @@
     "* Use the median of the ensemble.\n",
     "* Look carefully at the previous ensemble example.\n",
     "\n",
-    "** Questions**\n",
+    "**Questions**\n",
     "* Which out of the simple linear, multi-layer and ensemble models do you think is best in this instance?"
    ]
   },
@@ -983,7 +985,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#set tensorflow random seed for repeatability\n",
+    "# set tensorflow random seed for repeatability\n",
     "tf.random.set_seed(1066)\n",
     "\n",
     "N_MODLES = 20\n",
@@ -1019,7 +1021,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#this code will take a few seconds to execute\n",
+    "# this code will take a few seconds to execute\n",
     "H = 12\n",
     "e_preds = []\n",
     "for model in models:\n",
@@ -1049,7 +1051,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#plot the individual forecasts and the median\n",
+    "# plot the individual forecasts and the median\n",
     "\n",
     "fig,ax = plt.subplots(1, 2, sharey=True, figsize=(12, 4))\n",
     "ax[0].plot(e_preds_tran)\n",
@@ -1099,7 +1101,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1113,7 +1115,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
