--- a/06_neural_networks/feedforward/keras/autoregression_keras_part2_STUDENT.ipynb
+++ b/06_neural_networks/feedforward/keras/autoregression_keras_part2_STUDENT.ipynb
@@ -48,7 +48,7 @@
     "import seaborn as sns\n",
     "sns.set()\n",
     "\n",
-    "#tensorflow imports\n",
+    "# tensorflow imports\n",
     "import tensorflow as tf\n",
     "from tensorflow import keras\n",
     "from tensorflow.keras.layers import Input, Dense, Flatten, Dropout\n",
@@ -81,7 +81,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = 'https://raw.githubusercontent.com/health-data-science-OR/data/master/em_admits_ts.csv'\n",
+    "url = 'https://raw.githubusercontent.com/health-data-science-OR/data/master' \\\n",
+    "        + '/em_admits_ts.csv'\n",
     "em_admits = pd.read_csv(url)"
    ]
   },
@@ -131,7 +132,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "date_str = em_admits['month_year'].str[:3] + ' 20' + em_admits['month_year'].str[-2:]\n",
+    "date_str = em_admits['month_year'].str[:3] + ' 20' \\\n",
+    "    + em_admits['month_year'].str[-2:]\n",
     "date_str.name = 'date'\n",
     "em_admits = em_admits.set_index(pd.to_datetime(date_str))\n",
     "em_admits.index.freq = 'MS'\n",
@@ -304,7 +306,7 @@
    "source": [
     "scaler = MinMaxScaler(feature_range=(-1, 1))\n",
     "\n",
-    "#scale on training data\n",
+    "# scale on training data\n",
     "scaler.fit(admit_rate.iloc[:-12].to_numpy().reshape(-1, 1))"
    ]
   },
@@ -500,7 +502,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#script to train the models.\n",
+    "# script to train the models.\n",
     "\n",
     "################# Parameters for the ensemble #################################\n",
     "#set random seed so that ensemble can be repeated.\n",
@@ -529,10 +531,10 @@
     "else:\n",
     "    models = []\n",
     "    for n in range(N_MODELS):\n",
-    "        #single layer nn\n",
+    "        # single layer nn\n",
     "        model_n = get_linear_model(WINDOW_SIZE)\n",
     "\n",
-    "        #fit model silently (verbose=0)\n",
+    "        # fit model silently (verbose=0)\n",
     "        history = model_n.fit(x=X_train, \n",
     "                              y=y_train, \n",
     "                              epochs=N_EPOCHS,\n",
@@ -540,7 +542,7 @@
     "                              callbacks=[es], \n",
     "                              batch_size=32)\n",
     "\n",
-    "        #this will overwrite pre-trained models.\n",
+    "        # this will overwrite pre-trained models.\n",
     "        model_n.save(f'input/ensemble_model_{n}.h5')\n",
     "        models.append(model_n)"
    ]
@@ -567,8 +569,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#create the forecasts\n",
-    "#this code will take a few seconds to execute\n",
+    "# create the forecasts\n",
+    "# this code will take a few seconds to execute\n",
     "H = 12\n",
     "e_preds = []\n",
     "for model in models:\n",
@@ -607,7 +609,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#plot the individual forecasts and the median\n",
+    "# plot the individual forecasts and the median\n",
     "\n",
     "fig,ax = plt.subplots(1, 2, sharey=True, figsize=(12, 4))\n",
     "ax[0].plot(e_preds_tran)\n",
@@ -681,7 +683,7 @@
     "* Use the median of the ensemble.\n",
     "* Look carefully at the previous ensemble example.\n",
     "\n",
-    "** Questions**\n",
+    "**Questions**\n",
     "* Which out of the simple linear, multi-layer and ensemble models do you think is best in this instance?"
    ]
   },
@@ -712,7 +714,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -726,7 +728,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
