ARIMA: cleaned notebooks

--- a/02_arima/arima_exercises_SOLUTIONS.ipynb
+++ b/02_arima/arima_exercises_SOLUTIONS.ipynb
@@ -33,7 +33,8 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import sys"
    ]
   },
   {
@@ -51,8 +52,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#uncomment and run if you are working in Google Colab\n",
-    "#!pip install pmdarima"
+    "# if running in Google Colab install pdmarima\n",
+    "if 'google.colab' in sys.modules:\n",
+    "    !pip install pmdarima==1.6.0"
    ]
   },
   {
@@ -70,7 +72,7 @@
    "source": [
     "# Imports from `forecast-tools`\n",
     "\n",
-    "One of the exercises with compare ARIMA to a simple baseline forecast if are working from Google Colab (or not using `hds_stoch` environment) them please uncomment and run the below."
+    "One of the exercises compares ARIMA to a simple baseline forecast. If you are working from Google Colab  them please run the below.  If you are not in Colab or the`hds_forecast` environment then you can just `pip install forecast-tools`"
    ]
   },
   {
@@ -79,7 +81,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#!pip install forecast-tools"
+    "# if running in Google Colab install forecast-tools\n",
+    "if 'google.colab' in sys.modules:\n",
+    "    !pip install forecast-tools"
    ]
   },
   {
@@ -176,7 +180,8 @@
    "outputs": [],
    "source": [
     "# your code here ...\n",
-    "url = 'https://raw.githubusercontent.com/health-data-science-OR/hpdm097-datasets/master/ed_reattends_mth.csv'"
+    "url = 'https://raw.githubusercontent.com/health-data-science-OR/' \\\n",
+    "        + 'hpdm097-datasets/master/ed_reattends_mth.csv'"
    ]
   },
   {
@@ -185,7 +190,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#example solution\n",
+    "# example solution\n",
     "ed_reattends = pd.read_csv(url, parse_dates=True, \n",
     "                            dayfirst=True, index_col='date')\n",
     "\n",
@@ -307,7 +312,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#example solution\n",
+    "# example solution\n",
     "model_1 = auto_arima(y_train, m=12, suppress_warnings=True)\n",
     "model_1.summary()"
    ]
@@ -343,7 +348,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#example solution\n",
+    "# example solution\n",
     "model_2 = auto_arima(y_train, d=1, m=12, suppress_warnings=True)"
    ]
   },
@@ -366,11 +371,11 @@
     "    \n",
     "```python\n",
     "\n",
-    "#create an ARIMA object (suppress_warnings is optional)\n",
+    "# create an ARIMA object (suppress_warnings is optional)\n",
     "model = ARIMA(order=(1, 0, 0), seasonal_order=(1, 0, 0, 12), \n",
     "              suppress_warnings=True)\n",
     "\n",
-    "#fit the model to the training data.\n",
+    "# fit the model to the training data.\n",
     "model.fit(y_train)\n",
     "\n",
     "```\n",
@@ -395,7 +400,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#example solution\n",
+    "# example solution\n",
     "model_3 = ARIMA(order=(3, 1, 0), seasonal_order=(1, 0, 0, 12), \n",
     "                suppress_warnings=True)\n",
     "\n",
@@ -413,14 +418,14 @@
     "To make a prediction with a `pmdarima.ARIMA` model use the `model.predict()` method.  This takes the parameters `n_periods` which is the forecast horizon.\n",
     "\n",
     "```python\n",
-    "#return a numpy.array of predictions\n",
+    "# return a numpy.array of predictions\n",
     "preds = model.predict(n_periods=12)\n",
     "```\n",
     "\n",
     "You can (and should) also return a prediction interval with the point forecast. E.g. for a 95\\% PI:\n",
     "\n",
     "```python\n",
-    "#returns a tuple of (predictions, prediction_intervals)\n",
+    "# returns a tuple of (predictions, prediction_intervals)\n",
     "preds, intervals = model.predict(n_periods=12, alpha=0.05, \n",
     "                                 return_conf_int=True)\n",
     "```\n",
@@ -442,7 +447,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code here ..."
+    "# your code here ..."
    ]
   },
   {
@@ -451,7 +456,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#example solution\n",
+    "# example solution\n",
     "preds, intervals = model_1.predict(n_periods=24, return_conf_int=True)\n",
     "preds2, intervals2 = model_2.predict(n_periods=24, return_conf_int=True)\n",
     "preds3, intervals3 = model_3.predict(n_periods=24, return_conf_int=True)\n",
@@ -467,7 +472,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#plot the model with 95% predictions intervals\n",
+    "# plot the model with 95% predictions intervals\n",
     "fig, ax = plt.subplots(3, 1, sharex=True, figsize=(12, 8))\n",
     "\n",
     "ax[0].plot(y_train)\n",
@@ -531,11 +536,11 @@
     "A template for cross validation is as follows:\n",
     "\n",
     "```python\n",
-    "#6 month horizon that rolls the origin by 1 month at a time.\n",
-    "#by default it uses 1/3 of the data for initial training.\n",
+    "# 6 month horizon that rolls the origin by 1 month at a time.\n",
+    "# by default it uses 1/3 of the data for initial training.\n",
     "cv = RollingForecastCV(h=6, step=1)\n",
     "\n",
-    "#perform cv. (verbose controls the output to screen).\n",
+    "# perform cv. (verbose controls the output to screen).\n",
     "scores = cross_val_score(model_1, y_train, cv=cv, verbose=2, \n",
     "                              scoring='mean_absolute_error')\n",
     "\n",
@@ -554,7 +559,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code here ..."
+    "# your code here ..."
    ]
   },
   {
@@ -563,7 +568,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#example answer\n",
+    "# example answer\n",
     "\n",
     "cv = RollingForecastCV(h=6, step=1, initial=len(y_train) // 3)\n",
     "scores1 = cross_val_score(model_1, y_train, cv=cv, verbose=0, \n",
@@ -609,7 +614,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code here ..."
+    "# your code here ..."
    ]
   },
   {
@@ -618,7 +623,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#example solution\n",
+    "# example solution\n",
     "\n",
     "h=6\n",
     "min_train_size = len(y_train) // 3\n",
@@ -636,7 +641,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -650,7 +655,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
