--- a/02_arima/arima_exercises.ipynb
+++ b/02_arima/arima_exercises.ipynb
@@ -33,7 +33,8 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import sys"
    ]
   },
   {
@@ -51,8 +52,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#uncomment and run if you are working in Google Colab\n",
-    "#!pip install pmdarima"
+    "# if running in Google Colab install pdmarima\n",
+    "if 'google.colab' in sys.modules:\n",
+    "    !pip install pmdarima==1.6.0"
    ]
   },
   {
@@ -70,7 +72,7 @@
    "source": [
     "# Imports from `forecast-tools`\n",
     "\n",
-    "One of the exercises with compare ARIMA to a simple baseline forecast if are working from Google Colab (or not using `hds_stoch` environment) them please uncomment and run the below."
+    "One of the exercises compares ARIMA to a simple baseline forecast. If you are working from Google Colab  them please run the below.  If you are not in Colab or the`hds_forecast` environment then you can just `pip install forecast-tools`"
    ]
   },
   {
@@ -79,7 +81,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#!pip install forecast-tools"
+    "# if running in Google Colab install forecast-tools\n",
+    "if 'google.colab' in sys.modules:\n",
+    "    !pip install forecast-tools"
    ]
   },
   {
@@ -176,7 +180,8 @@
    "outputs": [],
    "source": [
     "# your code here ...\n",
-    "url = 'https://raw.githubusercontent.com/health-data-science-OR/hpdm097-datasets/master/ed_reattends_mth.csv'"
+    "url = 'https://raw.githubusercontent.com/health-data-science-OR/' \\\n",
+    "        + 'hpdm097-datasets/master/ed_reattends_mth.csv'"
    ]
   },
   {
@@ -466,7 +471,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -480,7 +485,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
