ENV: jupyterlab-spellchecker

--- a/06_neural_networks/feedforward/pytorch/autoregression_pytorch_part1.ipynb
+++ b/06_neural_networks/feedforward/pytorch/autoregression_pytorch_part1.ipynb
@@ -16,7 +16,7 @@
     "    \n",
     "2. The data preprocessing requirements for a NN are similar to those for Keras and TensorFlow, but there are additional steps needed regarding mini batches and make sure data are tensors.\n",
     "\n",
-    "2. Forecasting **h-steps** ahead uses the same approach as Keras/Tensorflow, but there are subtle differnces in the code.\n",
+    "2. Forecasting **h-steps** ahead uses the same approach as Keras/Tensorflow, but there are subtle differences in the code.\n",
     "</div>\n",
     "\n",
     "---\n",
@@ -71,14 +71,14 @@
     "## 2. Reminder: The forecasting process for AR\n",
     "\n",
     "1. Select $l$ the number of autoregressive lags and forecast horizon $h$\n",
-    "2. Preprocess the data into tabular form [[$lag_1, lag_2, ... lag_l$], [$y_t$]]\n",
+    "2. Pre-process the data into tabular form [[$lag_1, lag_2, ... lag_l$], [$y_t$]]\n",
     "3. Train the NN model using the tabular data\n",
     "4. Iteratively forecast 1-step ahead gradually replacing ground truth observations with predictions.\n",
     "\n",
     "\n",
     "### 2.1 Synthetic data without noise\n",
     "\n",
-    "Given the extra complexities of forecasting using OLS we will use simple synthetic data before exploring real healthcare data. The synthetic data we wil use is a cosine.  "
+    "Given the extra complexities of forecasting using OLS we will use simple synthetic data before exploring real healthcare data. The synthetic data we will use is a cosine.  "
    ]
   },
   {
@@ -250,7 +250,7 @@
    "source": [
     "## 2.3 Create the PyTorch model.\n",
     "\n",
-    "After preprocessing the data, we need to create our PyTorch model.  The first model we create will mimic the linear autoregressive model we built using an instance of `OLS`. This means we have neural network with a single layer with `window_size` inputs ans a single output.  "
+    "After pre-processing the data, we need to create our PyTorch model.  The first model we create will mimic the linear autoregressive model we built using an instance of `OLS`. This means we have neural network with a single layer with `window_size` inputs ans a single output.  "
    ]
   },
   {
