--- a/01_basics/01_practicals_notebooks/Practical_1_SOLUTIONS.ipynb
+++ b/01_basics/01_practicals_notebooks/Practical_1_SOLUTIONS.ipynb
@@ -44,7 +44,8 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import sys"
    ]
   },
   {
@@ -60,9 +61,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Note this is only need if you are running in colab or if you have not installed\n",
-    "#uncomment the line below to install.\n",
-    "#!pip install forecast-tools"
+    "# if running in Google Colab install forecast-tools\n",
+    "if 'google.colab' in sys.modules:\n",
+    "    !pip install forecast-tools"
    ]
   },
   {
@@ -149,7 +150,8 @@
    "outputs": [],
    "source": [
     "# your code here ...\n",
-    "url = 'https://raw.githubusercontent.com/health-data-science-OR/hpdm097-datasets/master/out_appoints_mth.csv'"
+    "url = 'https://raw.githubusercontent.com/health-data-science-OR/' \\\n",
+    "        + 'hpdm097-datasets/master/out_appoints_mth.csv'"
    ]
   },
   {
@@ -158,8 +160,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "appoints = pd.read_csv(url, \n",
-    "                   index_col='date', parse_dates=True, dayfirst=True)\n",
+    "appoints = pd.read_csv(url, index_col='date', parse_dates=True, dayfirst=True)\n",
     "appoints.index.freq = 'MS'"
    ]
   },
@@ -336,7 +337,8 @@
    "outputs": [],
    "source": [
     "# your code here ...\n",
-    "url = 'https://raw.githubusercontent.com/health-data-science-OR/hpdm097-datasets/master/ed_reattend.csv'"
+    "url = 'https://raw.githubusercontent.com/health-data-science-OR/' \\\n",
+    "       + 'hpdm097-datasets/master/ed_reattend.csv'"
    ]
   },
   {
@@ -345,8 +347,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "reattends = pd.read_csv(url, \n",
-    "                        index_col='date',  parse_dates=True, dayfirst=True)\n",
+    "reattends = pd.read_csv(url, index_col='date',  parse_dates=True, dayfirst=True)\n",
     "reattends.index.freq = 'MS'"
    ]
   },
@@ -600,7 +601,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -614,7 +615,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
