--- a/01_basics/01_practicals_notebooks/Practical_2.ipynb
+++ b/01_basics/01_practicals_notebooks/Practical_2.ipynb
@@ -31,7 +31,8 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import sys"
    ]
   },
   {
@@ -47,8 +48,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#you will need to uncomment and run the below if you are using Google colab\n",
-    "#!pip install forecast-tools"
+    "# if running in Google Colab install forecast-tools\n",
+    "if 'google.colab' in sys.modules:\n",
+    "    !pip install forecast-tools"
    ]
   },
   {
@@ -84,7 +86,8 @@
    "outputs": [],
    "source": [
     "# your code here ...\n",
-    "url = 'https://raw.githubusercontent.com/health-data-science-OR/hpdm097-datasets/master/out_appoints_mth.csv'"
+    "url = 'https://raw.githubusercontent.com/health-data-science-OR/' \\\n",
+    "        + 'hpdm097-datasets/master/out_appoints_mth.csv'"
    ]
   },
   {
@@ -262,7 +265,8 @@
    "outputs": [],
    "source": [
     "# your code here ...\n",
-    "url = 'https://raw.githubusercontent.com/health-data-science-OR/hpdm097-datasets/master/ed_reattend.csv'"
+    "url = 'https://raw.githubusercontent.com/health-data-science-OR/' \\\n",
+    "        + 'hpdm097-datasets/master/ed_reattend.csv'"
    ]
   },
   {
@@ -406,7 +410,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -420,7 +424,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
