--- a/01_basics/01_practicals_notebooks/Practical_2_SOLUTIONS.ipynb
+++ b/01_basics/01_practicals_notebooks/Practical_2_SOLUTIONS.ipynb
@@ -31,7 +31,8 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import sys"
    ]
   },
   {
@@ -47,8 +48,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#you will need to uncomment and run the below if you are using Google colab\n",
-    "#!pip install forecast-tools"
+    "# if running in Google Colab install forecast-tools\n",
+    "if 'google.colab' in sys.modules:\n",
+    "    !pip install forecast-tools"
    ]
   },
   {
@@ -84,7 +86,8 @@
    "outputs": [],
    "source": [
     "# your code here ...\n",
-    "url = 'https://raw.githubusercontent.com/health-data-science-OR/hpdm097-datasets/master/out_appoints_mth.csv'"
+    "url = 'https://raw.githubusercontent.com/health-data-science-OR/' \\\n",
+    "        + 'hpdm097-datasets/master/out_appoints_mth.csv'"
    ]
   },
   {
@@ -93,8 +96,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "appoints = pd.read_csv(url, \n",
-    "                   index_col='date', parse_dates=True, dayfirst=True)\n",
+    "appoints = pd.read_csv(url, index_col='date', parse_dates=True, dayfirst=True)\n",
     "appoints.index.freq = 'MS'"
    ]
   },
@@ -187,8 +189,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#example solution\n",
-    "\n",
+    "# example solution\n",
     "train = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
     "min_train_size = 5\n",
     "horizon = 1\n",
@@ -234,7 +235,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#example solution\n",
+    "# example solution\n",
     "\n",
     "train = appoints\n",
     "min_train_size = len(train) // 3\n",
@@ -320,7 +321,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#calling the CV code.\n",
+    "# calling the CV code.\n",
     "\n",
     "train = np.arange(24)\n",
     "model = SNaive(12)\n",
@@ -328,11 +329,11 @@
     "scores = []\n",
     "\n",
     "for train_fold, test_fold in cv_rolling:\n",
-    "    #this could be any model\n",
+    "    # this could be any model\n",
     "    model.fit(train_fold)\n",
     "    preds = model.predict(horizon)\n",
     "    \n",
-    "    #this could be any error measure\n",
+    "    # this could be any error measure\n",
     "    score = mean_absolute_error(test_fold, preds)\n",
     "    scores.append(score)\n",
     "     \n",
@@ -378,7 +379,8 @@
    "outputs": [],
    "source": [
     "# your code here ...\n",
-    "url = 'https://raw.githubusercontent.com/health-data-science-OR/hpdm097-datasets/master/ed_reattend.csv'"
+    "url = 'https://raw.githubusercontent.com/health-data-science-OR/' \\\n",
+    "        + 'hpdm097-datasets/master/ed_reattend.csv'"
    ]
   },
   {
@@ -389,9 +391,8 @@
    "source": [
     "# example solution\n",
     "\n",
-    "#load data\n",
-    "reattends = pd.read_csv(url, \n",
-    "                   index_col='date', parse_dates=True, dayfirst=True)\n",
+    "# load data\n",
+    "reattends = pd.read_csv(url, index_col='date', parse_dates=True, dayfirst=True)\n",
     "reattends.index.freq = 'MS'\n",
     "\n",
     "reattend_rate = reattends['reattends'] / reattends.index.days_in_month"
@@ -672,7 +673,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -686,7 +687,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
