DL101: np.int -> 'int'

--- a/06_neural_networks/deep_learning_101/lecture_deeplearning_101.ipynb
+++ b/06_neural_networks/deep_learning_101/lecture_deeplearning_101.ipynb
@@ -658,7 +658,7 @@
    "source": [
     "#view as 0/1\n",
     "THRESHOLD = 0.5\n",
-    "(y_pred >= THRESHOLD).astype(np.int)"
+    "(y_pred >= THRESHOLD).astype('int')"
    ]
   },
   {
