LAB5_6: .compile lr->learning_rate

--- a/06_neural_networks/feedforward/keras/autoregression_keras_part1_SOLUTIONS.ipynb
+++ b/06_neural_networks/feedforward/keras/autoregression_keras_part1_SOLUTIONS.ipynb
@@ -1051,7 +1051,7 @@
     "    model.add(Dense(n_neurons, activation='relu'))\n",
     "    model.add(Dense(outputs))\n",
     "    model.compile(loss='mse', \n",
-    "                  optimizer=Adam(lr=lr),\n",
+    "                  optimizer=Adam(learning_rate=lr),\n",
     "                  metrics=metrics)\n",
     "    return model"
    ]
