--- a/03_prophet/03_practicals_notebooks/prophet_exercises_SOLUTIONS.ipynb
+++ b/03_prophet/03_practicals_notebooks/prophet_exercises_SOLUTIONS.ipynb
@@ -111,7 +111,8 @@
     "if 'google.colab' in sys.modules:\n",
     "    !pip install pmdarima\n",
     "\n",
-    "from pmdarima import auto_arima, ARIMA"
+    "from pmdarima import auto_arima, ARIMA\n",
+    "from pmdarima.model_selection import RollingForecastCV, cross_val_score"
    ]
   },
   {
@@ -708,42 +709,58 @@
     "* This is daily level data.  For ARIMA this is `m=7`\n",
     "* Remember that Prophet and ARIMA use data in different formats. \n",
     "* It might take a few minutes for `auto_arima` to return results.  Once it has write down the order of the model so that you can easily recreate it with a `ARIMA` object.\n",
-    "* It will also take a few minutes for ARIMA cross validation to run.\n",
-    "* If you get a convergence warning when fitting `ARIMA` to your chosen model then try passing the parameter `maxiter=100` (or more) to the `ARIMA` constructor method."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#your code here"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# arima_model = auto_arima(y_train, m=7, suppress_warnings=True)\n",
+    "* ARIMA fitting is not always stable for daily level data and procedures may output some warnings.  Types of warning you may encounter are:\n",
     "\n",
-    "# model returned = SARIMAX(1, 1, 2)x(1, 0, [1], 7)\n",
-    "arima_model = ARIMA(order=(1, 1, 2), seasonal_order=(1, 0, 1, 7), maxiter=100)\n",
+    "**Convergence warning**: \n",
+    "\n",
+    "Where the the Maximum likelihood optimisation has failed to converge. If you get a convergence warning when fitting `ARIMA` to your chosen specification then try passing increasing the parameter `maxiter` (default=50) to 100 or more in the `auto_arima` function and `ARIMA` constructor method.\n",
+    "\n",
+    "**Non-invertible starting MA parameters warning**.  \n",
+    "\n",
+    "Details of what is meant by an invertible MA process can be found [here](https://otexts.com/fpp2/MA.html).  For our practical purposes the chances are if you see this then when using `auto_arima` and it is unlikely that this model will be selected by the procedure. There is a good chance the warning will also be encountered in cross validation when the model is using less data.  Its worth knowing that `statsmodels` will still fit a model in these circumstances.\n",
+    "\n",
+    "* If you wish you can surpress the warnings in `auto_arima` by setting `supress_warnings=True`\n",
+    "* It will also take a few minutes for ARIMA cross validation to run."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# your code here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arima_model = auto_arima(y_train, m=7, maxiter=100, suppress_warnings=True)\n",
+    "arima_model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Alternative model to try = SARIMAX(1, 1, 2)x(1, 0, [1], 7)\n",
+    "# model returned = SARIMAX(2, 1, 1)x(0, 0, 2, 7)\n",
+    "arima_model = ARIMA(order=(1, 1, 2), seasonal_order=(0, 0, 2, 7), maxiter=100)\n",
     "arima_model.fit(y_train)\n",
     "arima_model.summary()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# cross validation\n",
-    "\n",
-    "from pmdarima.model_selection import RollingForecastCV, cross_val_score"
+    "### ARIMA cross validation\n",
+    "\n"
    ]
   },
   {
