NN: autoregression_part2 patch

--- a/06_neural_networks/feedforward/keras/autoregression_keras_part2_SOLUTIONS.ipynb
+++ b/06_neural_networks/feedforward/keras/autoregression_keras_part2_SOLUTIONS.ipynb
@@ -537,12 +537,140 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(86, 12)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# what is the shape of X_train\n",
+    "X_train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([13732.32258065, 14163.33333333, 14071.4516129 , 14303.3       ,\n",
+       "       14604.12903226, 14258.16129032, 14328.78571429, 14414.35483871,\n",
+       "       13974.76666667, 13783.09677419, 13777.33333333, 13735.38709677])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# peak at first sample in X_train\n",
+    "X_train[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
    "outputs": [],
    "source": [
+    "def scale_arrays_of_X(X_to_scale, scaler):\n",
+    "    \"\"\"\n",
+    "    Takes a 2d array and transforms data using a sklearn scaler.  \n",
+    "    This is executed in a loop as the sklearn scalers have a strict \n",
+    "    interface for the dimensions of X.\n",
+    "    \n",
+    "    Params:\n",
+    "    ------\n",
+    "    X_to_scale: np.ndarray\n",
+    "        Sliding windows of X data\n",
+    "        \n",
+    "    scaler: MinMaxScaler\n",
+    "        Fitted scaler used to transform X_train.\n",
+    "        \n",
+    "    Returns:\n",
+    "    -------\n",
+    "    np.ndarray \n",
+    "        Dimensions are the same as X_train.\n",
+    "    \"\"\"\n",
+    "    X_scaled = []\n",
+    "    \n",
+    "    # scale each sample separately\n",
+    "    for sample in X_to_scale:\n",
+    "        # scale the sample\n",
+    "        scaled_sample = scaler.transform(sample.reshape(-1, 1))\n",
+    "        \n",
+    "        # store the sample in a list\n",
+    "        X_scaled.append(scaled_sample)\n",
+    "    \n",
+    "    # return the scaled data as np.ndarray with dimensions from input\n",
+    "    return np.array(X_scaled).reshape(len(X_scaled), -1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# scale all data\n",
     "y_train = scaler.transform(y_train.reshape(-1, 1))\n",
-    "X_train = scaler.transform(X_train)\n",
-    "X_test = scaler.transform(X_test)\n",
+    "X_train = scale_arrays_of_X(X_train, scaler)\n",
+    "X_test = scale_arrays_of_X(X_test, scaler)\n",
     "y_test = scaler.transform(y_test.reshape(-1, 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(86, 12)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# is the shape of X_train correct? yes.\n",
+    "X_train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-0.77636047, -0.57909863, -0.62115038, -0.51503971, -0.37735849,\n",
+       "       -0.53569847, -0.5033756 , -0.46421295, -0.66540044, -0.75312251,\n",
+       "       -0.75576028, -0.77495792])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# peak at first sample after transform.\n",
+    "X_train[0]"
    ]
   },
   {
@@ -564,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -581,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -604,14 +732,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-12-15 15:34:14.485296: I tensorflow/core/platform/cpu_feature_guard.cc:151] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "2022-02-04 15:30:44.746319: I tensorflow/core/platform/cpu_feature_guard.cc:151] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     }
@@ -637,16 +765,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fab143c87f0>"
+       "<matplotlib.legend.Legend at 0x7f82b82ecd60>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -676,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -713,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -756,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -765,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -795,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -820,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -829,7 +957,7 @@
        "406.9094184435199"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -863,7 +991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -872,7 +1000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -901,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -924,7 +1052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -962,7 +1090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1044,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1062,7 +1190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1129,7 +1257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1155,7 +1283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1164,7 +1292,7 @@
        "(12,)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1180,7 +1308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1217,7 +1345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1238,7 +1366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1292,7 +1420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1301,7 +1429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1337,7 +1465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1353,7 +1481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1362,7 +1490,7 @@
        "(12,)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1378,7 +1506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1415,7 +1543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
