NN: autoregression_part2 student nb patch

--- a/06_neural_networks/feedforward/keras/autoregression_keras_part2_STUDENT.ipynb
+++ b/06_neural_networks/feedforward/keras/autoregression_keras_part2_STUDENT.ipynb
@@ -316,10 +316,90 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# what is the shape of X_train\n",
+    "X_train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# peak at first sample in X_train\n",
+    "X_train[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def scale_arrays_of_X(X_to_scale, scaler):\n",
+    "    \"\"\"\n",
+    "    Takes a 2d array and transforms data using a sklearn scaler.  \n",
+    "    This is executed in a loop as the sklearn scalers have a strict \n",
+    "    interface for the dimensions of X.\n",
+    "    \n",
+    "    Params:\n",
+    "    ------\n",
+    "    X_to_scale: np.ndarray\n",
+    "        Sliding windows of X data\n",
+    "        \n",
+    "    scaler: MinMaxScaler\n",
+    "        Fitted scaler used to transform X_train.\n",
+    "        \n",
+    "    Returns:\n",
+    "    -------\n",
+    "    np.ndarray \n",
+    "        Dimensions are the same as X_train.\n",
+    "    \"\"\"\n",
+    "    X_scaled = []\n",
+    "    \n",
+    "    # scale each sample separately\n",
+    "    for sample in X_to_scale:\n",
+    "        # scale the sample\n",
+    "        scaled_sample = scaler.transform(sample.reshape(-1, 1))\n",
+    "        \n",
+    "        # store the sample in a list\n",
+    "        X_scaled.append(scaled_sample)\n",
+    "    \n",
+    "    # return the scaled data as np.ndarray with dimensions from input\n",
+    "    return np.array(X_scaled).reshape(len(X_scaled), -1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# scale all data\n",
     "y_train = scaler.transform(y_train.reshape(-1, 1))\n",
-    "X_train = scaler.transform(X_train)\n",
-    "X_test = scaler.transform(X_test)\n",
+    "X_train = scale_arrays_of_X(X_train, scaler)\n",
+    "X_test = scale_arrays_of_X(X_test, scaler)\n",
     "y_test = scaler.transform(y_test.reshape(-1, 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# is the shape of X_train correct? yes.\n",
+    "X_train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# peak at first sample after transform.\n",
+    "X_train[0]"
    ]
   },
   {
