PROPHET: England -> UK for holidays

--- a/03_prophet/03_practicals_notebooks/prophet_exercises.ipynb
+++ b/03_prophet/03_practicals_notebooks/prophet_exercises.ipynb
@@ -313,11 +313,11 @@
     "\n",
     "As this is ED reattendance data at the daily level, it is likely that we will be seeing some calender day/holiday effects.  Prophet has been designed to deal with 'holidays'.  Effectively a series of binary variables are added for each holiday.\n",
     "\n",
-    "Prophet has a number of standard holidays built in by country.  To add them in for 'England' you would use the following code:\n",
+    "Prophet has a number of standard holidays built in by country.  To add them in for 'UK' you would use the following code:\n",
     "\n",
     "```python\n",
     "model = Prophet(interval_width=0.95)\n",
-    "model.add_country_holidays(country_name='England')\n",
+    "model.add_country_holidays(country_name='UK')\n",
     "model.fit(y_train)\n",
     "```\n",
     "\n",
@@ -339,7 +339,7 @@
     "\n",
     "**Task:**\n",
     "\n",
-    "* Modify your code to include a holidays for 'England'\n",
+    "* Modify your code to include a holidays for 'UK'\n",
     "* Make an 84 day forecast\n",
     "* Plot the model components. \n",
     "* Explore the holidays\n",
@@ -498,7 +498,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
