--- a/03_prophet/03_practicals_notebooks/prophet_exercises.ipynb
+++ b/03_prophet/03_practicals_notebooks/prophet_exercises.ipynb
@@ -346,7 +346,7 @@
     "\n",
     "**Questions:**\n",
     "\n",
-    "* What do you notice about Christmas day, Easter Monday and Good Friday?  Are there any other days that appear important?\n",
+    "* What do you notice about Christmas day, and Good Friday?  Are there any other days that appear important?\n",
     "\n",
     "**Hints:**\n",
     "* Take a look at the new forecast dataframe.  This includes new columns with the effect of each `holidays`."
@@ -498,7 +498,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
